[package]
name = "lets-trace-some-rays-in-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Vector math
glam = { version = "0.22.0", features = ["glam-assert"] }
# Random distributions
rand = "0.8.5"
# Error handling
anyhow = { version = "1.0.69", features = ["backtrace"] }
pixels = "0.11.0"
# Framebuffer
egui = "0.20.0"
egui-wgpu = "0.20.0"
egui-winit = { version = "0.20", default-features = false, features = ["links"] }
# Windows/Event loops
winit = "0.27"
winit_input_helper = "0.13"
# Logging
log = "0.4"
env_logger = "0.10.0"
colstodian = "0.1.0-rc.3"
# OpenEXR save
exr = "1.5.3"
smallvec = "1.10.0"
