[package]
name = "lets-trace-some-rays-in-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# Vector math
glam = { version = "0.22.0", features = ["glam-assert"] }
# Random distributions
rand = "0.8.5"
# Error handling
anyhow = { version = "1.0.69", features = ["backtrace"] }
pixels = "0.11.0"
# Framebuffer
iced = { version = "0.8.0", features = ["image", "debug", "tokio"] }
# Color
colstodian = "0.1.0-rc.3"
# OpenEXR handling
exr = "1.5.3"
smallvec = "1.10.0"
